
syntax = "proto3";

package api.v1;

option go_package = "hanashite/api/v1";

message ConnectRequest {
  bytes client_key = 1;
}

message ConnectResponse {
string message = 1;
}

message CryptedMessage {
  bytes message = 1;
}